# Tiresias

./: .gitignore  CMakeLists.txt  README.md  configure.sh
Model/: SVMFirstName.json  SVMLastName.json  SVMLocality.json
Trigram/: GramsFirstName.ref  GramsLastName.ref  GramsLocality.ref
dico/: ConfigDescriptor.json  DicoAdress.json  DicoHeader.json  DicoMultiField.json
docker/: Dockerfile.debian
documentation/: firstName.ipynb  learn.py
libs/: Descriptor.cpp
libs/buffer/: BuildBuffer.cpp  BuildBuffer.h  Column.h  Column.tpp  DataAnalysis.cpp  DataAnalysis.h
libs/detection/: DetectEmail.cpp  DetectEmail.h  DetectName.cpp  DetectName.h  DetectPhone.cpp  DetectPhone.h  DetectZipCode.cpp  DetectZipCode.h
libs/encoding/: AnalysisCharacter.cpp  AnalysisCharacter.h  DetectEncoding.h  EncodingAnalysis.cpp  EncodingAnalysis.h
libs/header/: AnalysisHeader.cpp  AnalysisHeader.h  Classifier.cpp  Classifier.h  Header.cpp  Header.h  SearchHeader.cpp  SearchHeader.h
libs/ngrams/: ExtractedNGrams.h  NGramExtractor.cpp  NGramExtractor.h
libs/readerCsv/: AnalysisDelimiter.cpp  AnalysisDelimiter.h  CountDelimiter.cpp  CountDelimiter.h  ReaderCsv.h  ReaderCsv.tpp
libs/readerFile/: FileArchive.cpp  FileArchive.h  FileArchiveBinary.cpp  FileArchiveBinary.h  FileBzLibBinary.cpp  FileBzLibBinary.h  FileCompressed.cpp  FileCompressed.h  FileCsv.cpp  FileCsv.h  FileCsvBinary.cpp  FileCsvBinary.h  FileParameters.cpp  FileParameters.h  FileZLibBinary.cpp  FileZLibBinary.h
libs/util/: Params.cpp  Params.h  Utils.h
smartDescriptor/: Descriptor.h
unit_test/: CMakeLists.txt
unit_test/test_file/: fileTest.csv  fileTest.csv.bz2  fileTest.csv.lzma  fileTest.tar  fileTest.tar.bz2  fileTest.tar.xz  fileTest1.csv
unit_test/test_src/: module.cpp  module.h  test_AnalysisDelimiter.cpp  test_AnalysisHeader.cpp  test_Column.cpp  test_DataAnalysis.cpp  test_DetectEmail.cpp  test_DetectPhone.cpp  test_DetectZipCode.cpp  test_File.cpp  test_FileBinary.cpp  test_FileParameters.cpp  test_Header.cpp  test_NgramExtractor.cpp  test_SearchHeader.cpp  test_buildBuffer.cpp  test_headerClassifier.cpp  test_readerCsv.cpp
